# study_lab3

./: CMakeLists.txt
.github/workflows/: github-actions-demo.yml
inc/: custom_allocator.h  custom_vector.h
src/: main.cpp
tests/: allocator_test.cpp  vector_test.cpp
